# birdcam

./: .gitignore  LICENSE  README.md  birdcam.py  birdcam.service  camera_test.py  pyproject.toml
deploy/node/: install.sh  mediamtx.service  mediamtx.yml
deploy/recorder/: birdcam-recorder.service  config.example.toml  install.sh
deploy/standalone/: .env  birdcam-frontend.service  birdcam.service  config.example.toml  install.sh
frontend/: .env.local.example  README.md  index.html  vite.config.js
frontend/src/: App.css  App.jsx  ClipCard.jsx  Pagination.jsx  VideoPlayer.jsx  api.js  rotation.js
src/: __init__.py  camera.py  config.py  ingest.py  motion.py  recording.py  rotation.py
src/birdcam/: config.py  ingest.py  recorder.py  standalone.py  state.py  web.py
