[project]
name = "birdcam"
version = "0.2.0"
description = "Raspberry Pi motion-triggered camera: self-contained node or fleet recorder."
requires-python = ">=3.9"
# Base deps are what the recorder needs. The standalone (camera) path adds picamera2 via the
# `standalone` extra so the recorder never has to resolve a Pi-only camera dependency.
dependencies = [
    "flask>=3.0.0",
    "opencv-python-headless>=4.10.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
# On a Pi, picamera2 + libcamera come from apt; create the venv with --system-site-packages
# so they resolve. This extra just declares the dependency for completeness.
standalone = ["picamera2>=0.3.34"]
recorder = []

[project.scripts]
birdcam-standalone = "birdcam.standalone:main"
birdcam-recorder = "birdcam.recorder:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/birdcam"]